fix(archive): Add archive/ to .archiveignore to prevent recursive bloat
- Added archive/ directory to exclusion list
- Prevents archives from copying themselves recursively
- Fixes 37GB+ bloat issues in v531 archives
- Each archive should now be ~30-90MB (not GB)

Refs: #archive-bloat-fix

--- a/.archiveignore
+++ b/.archiveignore
@@ -104,6 +104,9 @@ backups/
 data_db_backup*/
 berk_claude_file_pool_DONT_DELETE/
 
+# Archives (CRITICAL - prevents recursive bloat!)
+archive/
+
 # Large data files
 *.csv
 *.xlsx
