feat(git): enhance dev/prod workflow safety
- Update .prodignore with nested safety patterns
  - Added archive/code/, archive/data/, archive/database/, archive/versions/
  - Added data/backups/, core/data/postgres/backup/

- Add pre-push verification to push-prod command
  - New verify_no_sensitive_files() function
  - Checks for archive/, data/, *.sql, *.db, .env in git
  - Prevents accidental push of sensitive files to production
  - Shows detailed error messages with file counts and examples

- Defense in depth: Multiple layers of protection
  - .gitignore (prevents tracking)
  - .prodignore (filters prod push)
  - Pre-push verification (catches mistakes)

Refs: docs/guides/dev-prod-workflow.md, RULES.md

--- a/.prodignore
+++ b/.prodignore
@@ -22,6 +22,11 @@ screenshots_archive/
 # ===== ARCHIVES (CRITICAL - Dev Only) =====
 # All archives are development-only
 archive/
+# Additional nested safety (defense in depth)
+archive/code/
+archive/data/
+archive/database/
+archive/versions/
 
 # ===== BUILD ARTIFACTS =====
 build/
@@ -38,6 +43,9 @@ __pycache__/
 data/
 data_db/
 data_db_backup*/
+# Additional nested safety for backups
+data/backups/
+core/data/postgres/backup/
 
 # ===== VIRTUAL ENVIRONMENTS =====
 venv/
