chore(git): remove all archive/ from git tracking
BREAKING CHANGE: Archive directory is now completely local-only

- Removed exception rules for archive/planning/ and archive/docs/
- Removed 23 archive files from git tracking (preserved on disk)
- Archive directory never goes to dev or prod repos
- All archive content is local development history only

Rationale:
- Archive contains development history and planning docs
- Should not be in version control (dev or prod)
- Reduces repo size and complexity
- Planning docs can be maintained outside of git if needed

--- a/.gitignore
+++ b/.gitignore
@@ -8,12 +8,9 @@ data/
 # data/ is already ignored above (line 4)
 
 # ===== ARŞİVLER =====
-# Ignore all archives except planning and docs
+# CRITICAL: Archive directory is NEVER committed to git (dev or prod)
+# All archive content is local-only for development history
 archive/
-!archive/planning/
-!archive/planning/**
-!archive/docs/
-!archive/docs/**
 archive_backup*/
 
 # ===== PYTHON ORTAMI =====
