--- a/core/clients/web/requirements.txt
+++ b/core/clients/web/requirements.txt
@@ -1,4 +1,7 @@
-# Core Django Dependencies
+# UNIBOS Backend Requirements
+# Single consolidated requirements file for all deployments
+
+# Core Django
 Django==5.0.1
 django-cors-headers==4.3.1
 django-environ==0.11.2
@@ -26,12 +29,12 @@ qrcode==7.4.2
 # WebSocket Support
 channels==4.0.0
 channels-redis==4.2.0
-# daphne removed - using uvicorn instead for better performance
 
 # Async Support
 asgiref==3.7.2
 aiohttp==3.9.1
 aioredis==2.0.1
+websockets==12.0
 
 # Task Queue
 celery==5.3.4
@@ -43,20 +46,6 @@ django-prometheus==2.3.1
 sentry-sdk==1.39.1
 python-json-logger==2.0.7
 
-# Development & Testing
-pytest==7.4.4
-pytest-django==4.7.0
-pytest-asyncio==0.21.1
-pytest-cov==4.1.0
-factory-boy==3.3.0
-faker==21.0.0
-
-# Code Quality
-flake8==7.0.0
-black==23.12.1
-mypy==1.8.0
-django-stubs==4.2.7
-
 # Utilities
 python-decouple==3.8
 pillow==10.2.0
@@ -65,33 +54,9 @@ python-dateutil==2.8.2
 pytz==2023.3.post1
 user-agents==2.2.0
 
-# OCR and Image Processing
-pytesseract==0.3.10
-opencv-python==4.9.0.80
-numpy==1.26.3
-
-# Advanced OCR Libraries
-paddleocr==3.3.1
-paddlepaddle==2.6.2  # 3.x has segfault issues on ARM64
-torch==2.6.0
-torchvision==0.21.0
-transformers==4.57.1
-sentencepiece==0.2.0
-protobuf==5.29.3
-
-# Additional OCR Tools
-easyocr==1.7.2
-surya-ocr==0.9.0
-python-doctr[torch]==0.9.0
-pdf2image==1.17.0
-pypdfium2==4.30.0
-
-# Ollama Integration (optional - requires local Ollama installation)
-# Ollama modelleri: ollama pull llama3.2-vision
-
 # Production Server
 gunicorn==21.2.0
-uvicorn[standard]==0.32.0  # ASGI server - used as Gunicorn worker for HTTP/2 + WebSocket
+uvicorn[standard]==0.32.0
 whitenoise==6.6.0
 
 # API Documentation
