--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,8 @@ dependencies = [
     "click>=8.0.0",
     "psutil>=5.9.0",
     "zeroconf>=0.80.0",
+    "websockets>=12.0",
+    "aiohttp>=3.9.0",
 ]
 
 [project.optional-dependencies]
