--- a/core/clients/mobile/pubspec.yaml
+++ b/core/clients/mobile/pubspec.yaml
@@ -1,7 +1,7 @@
 name: unibos_mobile
 description: "UNIBOS - Universal Basic Operating System Mobile App"
 publish_to: 'none'
-version: 1.1.4+20251204072502
+version: 1.1.4+114
 
 environment:
   sdk: ^3.9.2
